# lab1_OS

./: CMakeLists.txt  main.cpp  menu.cpp  prog1.cpp  prog1.h  prog2.cpp  prog2.h
